<resources>
    <string name="app_name" translatable="false">BChat Messenger</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="ban" translatable="false">Ban</string>
    <string name="please_wait" translatable="false">Please wait...</string>
    <string name="save" translatable="false">Save</string>
    <string name="note_to_self" translatable="false">Note to Self</string>
    <string name="version_s" translatable="false">Version %s</string>
    <string name="AbstractNotificationBuilder_new_message" translatable="false">New message</string>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now" translatable="false">Delete All Old Messages Now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete" translatable="false">Delete</string>
    <string name="ApplicationPreferencesActivity_On" translatable="false">On</string>
    <string name="ApplicationPreferencesActivity_Off" translatable="false">Off</string>
    <string name="DraftDatabase_Draft_image_snippet" translatable="false">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet" translatable="false">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet" translatable="false">(video)</string>
    <string name="DraftDatabase_Draft_quote_snippet" translatable="false">(reply)</string>
    <string name="AttachmentManager_cant_open_media_selection" translatable="false">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio" translatable="false">BChat requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information" translatable="false">BChat requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied" translatable="false">BChat requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AudioSlidePlayer_error_playing_audio" translatable="false">Error playing audio!</string>
    <string name="BucketedThreadMedia_Today" translatable="false">Today</string>
    <string name="BucketedThreadMedia_Yesterday" translatable="false">Yesterday</string>
    <string name="BucketedThreadMedia_This_week" translatable="false">This week</string>
    <string name="BucketedThreadMedia_This_month" translatable="false">This month</string>
    <string name="CommunicationActions_no_browser_found" translatable="false">No web browser found.</string>
    <string name="ContactsCursorLoader_groups" translatable="false">Groups</string>
    <string name="ConversationItem_error_not_delivered" translatable="false">Send failed, tap for details</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process" translatable="false">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left" translatable="false">%1$s has left the group.</string>
    <string name="ConversationItem_click_to_approve_unencrypted" translatable="false">Send failed, tap for unsecured fallback</string>
    <string name="ConversationItem_unable_to_open_media" translatable="false">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_copied_text" translatable="false">Copied %s</string>
    <string name="ConversationItem_read_more" translatable="false">Read More</string>
    <string name="ConversationItem_download_more" translatable="false">&#160; Download More</string>
    <string name="ConversationItem_pending" translatable="false">&#160; Pending</string>
    <string name="ConversationActivity_add_attachment" translatable="false">Add attachment</string>
    <string name="ConversationActivity_select_contact_info" translatable="false">Select contact info</string>
    <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment" translatable="false">Sorry, there was an error setting your attachment.</string>
    <string name="ConversationActivity_message" translatable="false">Write a message....</string>
    <string name="ConversationActivity_compose" translatable="false">Compose</string>
    <string name="ConversationActivity_muted_until_date" translatable="false">Muted until %1$s</string>
    <string name="ConversationActivity_muted_forever" translatable="false">Muted</string>
    <string name="ConversationActivity_member_count" translatable="false">%1$d members</string>
    <string name="ConversationActivity_open_group_guidelines" translatable="false">Community Guidelines</string>
    <string name="ConversationActivity_social_group_welcome" translatable="false">Welcome to BChat</string>
    <string name="ConversationActivity_invalid_recipient" translatable="false">Invalid recipient!</string>
    <string name="RecipientPreferenceActivity_block" translatable="false">Block</string>
    <string name="RecipientPreferenceActivity_unblock" translatable="false">Unblock</string>
    <string name="RecipientPreferenceActivity_notification_settings" translatable="false">Notification settings</string>
    <string name="MuteDialog_mute_notifications" translatable="false">Mute notifications</string>
    <string name="MessageNotifier_mark_all_as_read" translatable="false">Mark all as read</string>
    <string name="preferences__send_link_previews" translatable="false">Send link previews</string>
    <string name="preferences__previews_are_supported_for" translatable="false">Previews are supported for Imgur, Instagram, Pinterest, Reddit, and YouTube links</string>
    <string name="preferences__notifications" translatable="false">All Notifications</string>
    <string name="preferences__led_color" translatable="false">LED color</string>
    <string name="preferences__pref_led_blink_title" translatable="false">LED blink pattern</string>
    <string name="preferences__sound" translatable="false">Sound</string>
    <string name="preferences__repeat_alerts" translatable="false">Repeat alerts</string>
    <string name="preferences__vibrate" translatable="false">Vibrate</string>
    <string name="preferences__incognito_keyboard" translatable="false">Incognito keyboard</string>
    <string name="preferences__read_receipts" translatable="false">Read receipts</string>
    <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts" translatable="false">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="preferences__typing_indicators" translatable="false">Typing indicators</string>
    <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators" translatable="false">If typing indicators are disabled, you won\'t be able to see typing indicators from others.</string>
    <string name="preferences__request_keyboard_to_disable_personalized_learning" translatable="false">Request keyboard to disable personalized learning</string>
    <string name="preferences_app_protection__app_access" translatable="false">App Access</string>
    <string name="preferences_app_protection__communication" translatable="false">Communication</string>
    <string name="preferences_notifications__messages" translatable="false">Messages</string>
    <string name="preferences_notifications__in_chat_sounds" translatable="false">In-chat sounds</string>
    <string name="preferences_notifications__show" translatable="false">Show</string>
    <string name="preferences_notifications__priority" translatable="false">Priority</string>
    <string name="preferences_chat_pay_as_you_chat_title" translatable="false">Pay as you chat</string>
    <string name="preferences_wallet_title" translatable="false">Wallet</string>
    <string name="preferences_start_wallet_subtitle" translatable="false">Enabling wallet will allow you to send and receive BDX</string>
    <string name="preferences_pay_as_you_chat_subTitle" translatable="false">Enabling \‘Pay As You Chat\’ will allow you to send and receive BDX right from the chat window</string>
    <string name="conversation_muted__unmute" translatable="false">Unmute</string>
    <string name="Permissions_allow" translatable="false">Allow</string>
    <string name="preferences_app_protection__screen_lock" translatable="false">Screen lock</string>
    <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint" translatable="false">Lock BChat access with Android screen lock or fingerprint</string>
    <string name="preferences_app_protection__screen_lock_inactivity_timeout" translatable="false">Screen lock inactivity timeout</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="activity_notification_settings_style_section_title" translatable="false">Notification Style</string>
    <string name="activity_notification_settings_content_section_title" translatable="false">Notification Content</string>
    <string name="preferences_notifications_strategy_category_title" translatable="false">Notification Strategy</string>
    <string name="preferences_notifications_strategy_category_fast_mode_title" translatable="false">Use Fast Mode</string>
    <string name="preferences_notifications_strategy_category_fast_mode_summary" translatable="false">You’ll be notified of new messages reliably and immediately using Google’s notification servers.</string>
    <string name="details" translatable="false">Details</string>
    <string name="dialog_open_url_title" translatable="false">Open URL?</string>
    <string name="dialog_open_url_explanation" translatable="false">Are you sure you want to open %s?</string>
    <string name="open" translatable="false">Open</string>
    <string name="conversation_pin" translatable="false">Pin</string>
    <string name="conversation_unpin" translatable="false">Unpin</string>
    <string name="mark_all_as_read" translatable="false">Mark all as read</string>
    <string name="preferences__voice_video_calls" translatable="false">Voice and video calls</string>
    <string name="preferences__allow_access_voice_video" translatable="false">Allow access to accept voice and video calls from other users</string>
    <string name="dialog_title_full_screen_intent" translatable="false">Full Screen Notification</string>
    <string name="dialog_content_full_screen_intent" translatable="false">Allow BChat to show full screen notifications for incoming calls and other notifications when the device is locked</string>
</resources>