<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preferences_app_protection__app_access"
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_layout_header">

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:key="pref_android_screen_lock"
            android:defaultValue="false"
            app:isPreferenceVisible="false"
            app:iconSpaceReserved="false"
            android:title="@string/preferences_app_protection__screen_lock"
            android:summary="@string/preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint" />

        <Preference
            android:title="@string/preferences_app_protection__screen_lock_inactivity_timeout"
            android:key="pref_android_screen_lock_timeout"
            android:dependency="pref_android_screen_lock"
            app:isPreferenceVisible="false"/>

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="pref_incognito_keyboard"
            android:title="@string/preferences__incognito_keyboard"
            android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_incognito_keyboard" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_wallet_title"
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_layout_header">

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_is_wallet_active"
            app:iconSpaceReserved="false"
            android:title="Start Wallet"
            android:summary="@string/preferences_start_wallet_subtitle"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_wallet_setting"/>

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_pay_as_you_chat"
            app:iconSpaceReserved="false"
            android:title="@string/preferences_chat_pay_as_you_chat_title"
            android:dependency="pref_is_wallet_active"
            android:summary="@string/preferences_pay_as_you_chat_subTitle"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_pay_as_chat_setting"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/preferences_app_protection__communication"
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_layout_header">

        <!-- <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_turn_only"
            android:title="@string/preferences_advanced__always_relay_calls"
            android:summary="@string/preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address"/> -->

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_read_receipts"
            app:iconSpaceReserved="false"
            android:title="@string/preferences__read_receipts"
            android:summary="@string/preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_read_receipet_setting"/>

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            android:key="pref_typing_indicators"
            android:title="@string/preferences__typing_indicators"
            android:summary="@string/preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_type_indicater_setting"/>

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_link_previews"
            app:iconSpaceReserved="false"
            android:summary="@string/preferences__previews_are_supported_for"
            android:title="@string/preferences__send_link_previews"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_send_link_setting"/>

        <!-- <Preference android:key="preference_category_blocked"
                    android:title="@string/preferences_app_protection__blocked_contacts" /> -->

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_call_notifications_enabled"
            android:title="@string/preferences__voice_video_calls"
            android:summary="@string/preferences__allow_access_voice_video"
            app:layout="@layout/preference_layout"
            app:icon="@drawable/ic_video_call_setting"/>
    </PreferenceCategory>

    <!-- <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_communication__category_sealed_sender">

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_show_unidentifed_delivery_indicators"
            android:title="@string/preferences_communication__sealed_sender_display_indicators"
            android:summary="@string/preferences_communication__sealed_sender_display_indicators_description"/>

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_universal_unidentified_access"
            android:title="@string/preferences_communication__sealed_sender_allow_from_anyone"
            android:summary="@string/preferences_communication__sealed_sender_allow_from_anyone_description"/>

        <Preference
            android:key="pref_unidentified_learn_more"
            android:layout="@layout/unidentified_delivery_learn_more" />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_app_protection__registration_lock">

        <io.beldex.bchat.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_registration_lock"
            android:title="@string/preferences_app_protection__registration_lock_pin"
            android:summary="@string/preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required"/>

    </PreferenceCategory> -->

</PreferenceScreen>
