<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    android:background="@drawable/bchat_id_text_view_background"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/detailsTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/details"
        app:drawableStartCompat="@drawable/ic_details"
        app:drawableTint="?attr/colorControlNormal" />

    <TextView
        android:id="@+id/pinTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/conversation_pin"
        android:visibility="gone"
        app:drawableStartCompat="?attr/menu_pin_icon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/unpinTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/conversation_unpin"
        android:visibility="gone"
        app:drawableStartCompat="?attr/menu_unpin_icon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/blockTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/RecipientPreferenceActivity_block"
        android:visibility="gone"
        app:drawableStartCompat="?attr/menu_block_icon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/unblockTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/RecipientPreferenceActivity_unblock"
        android:visibility="gone"
        app:drawableStartCompat="?attr/menu_un_block_icon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/muteNotificationsTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/MuteDialog_mute_notifications"
        app:drawableStartCompat="@drawable/ic_outline_notifications_off_24"
        tools:visibility="visible"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/unMuteNotificationsTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/conversation_muted__unmute"
        app:drawableStartCompat="@drawable/ic_outline_notifications_active_24"
        tools:visibility="visible"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/notificationsTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/RecipientPreferenceActivity_notification_settings"
        app:drawableStartCompat="@drawable/ic_outline_notification_important_24"
        tools:visibility="visible"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/markAllAsReadTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/mark_all_as_read"
        app:drawableStartCompat="?attr/menu_mark_all_as_read"
        tools:visibility="visible"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/deleteTextView"
        style="@style/BottomSheetActionItem"
        android:text="@string/delete"
        app:drawableStartCompat="?attr/menu_trash_icon" />

</LinearLayout>
