<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bchat_dialog_background_shape"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/dialog_title_full_screen_intent"
        android:textColor="@color/button_green"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_spacing"
        android:layout_marginTop="@dimen/medium_spacing"
        android:layout_marginEnd="@dimen/medium_spacing"
        android:layout_marginBottom="@dimen/medium_spacing"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/dialog_content_full_screen_intent"
        android:textColor="@color/text"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fullScreenIntentCancelButton"
            style="@style/Widget.Bchat.Button.Dialog.Ok"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/fullScreenIntentEnableButton"
            style="@style/Widget.Bchat.Button.Dialog.Enable"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Permissions_allow"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>