<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_dialog_background_inset"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:elevation="4dp"
    android:padding="32dp">

    <TextView
        android:fontFamily="@font/open_sans_bold"
        android:id="@+id/openURLTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_open_url_title"
        android:textColor="@color/text"
        android:textSize="16sp" />

    <TextView
        android:fontFamily="@font/open_sans_regular"
        android:id="@+id/openURLExplanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:text="@string/dialog_open_url_explanation"
        android:paddingHorizontal="@dimen/medium_spacing"
        android:textColor="@color/text"
        android:textSize="@dimen/small_font_size"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Bchat.Button.Dialog.Cancel"
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="14sp"/>

        <Button
            style="@style/Widget.Bchat.Button.Dialog.Enable"
            android:id="@+id/openURLButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/medium_spacing"
            android:text="@string/open"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>